# ai-court-architecture

./: .env.example  .gitignore  ACTIVATION_CHECKLIST.md  CLAUDE.md  GETTING_STARTED_LUFFA.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LUFFA_ARCHITECTURE.md  LUFFA_DEEP_ANALYSIS.md  LUFFA_EXPERIENCE.md  LUFFA_FINAL_PLAN.md  LUFFA_INTEGRATION_PLAN.md  LUFFA_READY.md  LUFFA_SETUP.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFINEMENT_ROADMAP.md  SETUP.md  SYSTEM_STATUS.md  VERIFICATION_REPORT.md  add_bots_to_user.py  conftest.py  demo_fact_checker.py  play.sh  pyproject.toml  run_courtroom.sh  run_demo.sh  run_luffa_bot.sh  run_multi_bot.sh  run_server.sh  send_bot_list_to_group.py  send_bot_uids.py  setup_bots.py  simulate_trial_start.py  start_veritas.sh  test_balanced_trial.py  test_bot_connectivity.py  test_complexity_final_assessment.py  test_complexity_interactive.py  (+8 more)
docs/: LUFFA_INTEGRATION.md  README.md  architecture.md  bot-deployment-guide.md  bot-interaction-flow.md  case-authoring-guidelines.md  case-digital-deception-002.md  case-validation-tool.md  deployment.md  juror-prompts-enhancement.md  luffa-api-cookbook.md  luffa-architecture.md  luffa-guide.md  multi-bot-architecture.md  multi-bot-setup.md  multi-bot-summary.md  production-deployment-checklist.md  quickstart.md  roadmap.md  status.md  system-overview.md  task-22.1-polling-loop.md  task-22.2-command-handlers.md  task-22.3-group-broadcasting.md  task-22.5-e2e-validation.md  task-23.2-validation-tool.md  task-24-verification-checklist.md  task-24.1-connection-pooling.md  (+4 more)
src/: __init__.py  (+29 more)
(+84 files in other folders)
